tests/lime/fail/tokens/label_rest/byte_39.wsa
jmp .l' .l': push 39
